Applying logic to assign employee to the desired mission

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NOTION_TOKEN="secret_5KgIhFFh4Izz8VoGjEfrUV9Ru41fsGNf4fnPS9GaCCG"
-DATABASE_ID="d1e9808674fe427bba3682f370566f41"
+DATABASE_ID_INTERVENTION="d1e9808674fe427bba3682f370566f41"
+DATABASE_ID_TECHNICIEN="3392babe8b4041bfa1378f5ad99b174e"
