--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@notionhq/client": "^2.2.7",
     "express-handlebars": "^7.0.7",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
