--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@notionhq/client": "^2.2.7",
+    "dotenv": "^16.3.1",
     "express-handlebars": "^7.0.7",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
